# mmux-bash-mpfr

./: Makefile.am  NEWS  README  configure.ac  configure.sh
doc/: mmux-bash-mpfr.texi
meta/m4/: libmmux-bash-builtins.m4  libmmux-bash-mpfr-builtins.m4
meta/scripts/: mmux-bash-mpfr.pc.in  print-builtin-names.bash
src/: libmmux-bash-mpfr.bash.in  libmmux-bash-mpfr.bash.m4  mmux-bash-mpfr-arithmetic.c.m4  mmux-bash-mpfr-assignment-builtins.c.m4  mmux-bash-mpfr-comparison.c.m4  mmux-bash-mpfr-config.h.in  mmux-bash-mpfr-conversion.c.m4  mmux-bash-mpfr-exceptions.c.m4  mmux-bash-mpfr-exponent.c.m4  mmux-bash-mpfr-init.c.m4  mmux-bash-mpfr-integers.c.m4  mmux-bash-mpfr-internals.h  mmux-bash-mpfr-internals.h.m4  mmux-bash-mpfr-library.c.m4  mmux-bash-mpfr-memory.c.m4  mmux-bash-mpfr-misc.c.m4  mmux-bash-mpfr-miscellaneous.c.m4  mmux-bash-mpfr-output.c.m4  mmux-bash-mpfr-rounding.c.m4  mmux-bash-mpfr-setters.c.m4  mmux-bash-mpfr-setting.c  mmux-bash-mpfr-setting.c.m4  mmux-bash-mpfr-sign.c.m4  mmux-bash-mpfr-stepping.c.m4  mmux-bash-mpfr-transcendental.c.m4  mmux-bash-mpfr-type-functions.c.m4  mmux-bash-mpfr.h
src/m4/: macros-for-cc-mpfr.m4  mmux-bash-mpfr-config.m4.in
tests/: arithmetic.test.m4  assignment.test.m4  comparison.test.m4  conversion.test.m4  exceptions.test.m4  exponent.test.m4  init.test.m4  integers.test.m4  misc.test.m4  miscellaneous.test.m4  packages.test.m4  printing.test.m4  rounding.test.m4  setters.test.m4  sign.test.m4  stepping.test.m4  test-exponent.bash.m4  test-memory.bash.m4  test-transcendental.bash.m4  transcendental.test.m4  version.test.m4
